Better handling where definition handler can't be found